--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pragmarx/zipcode",
+    "name": "bee-b/zipcode",
 
     "description": "A worldwide address-by-zipcode searcher.",
 
